<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2009-2015 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="false"
		android:layout_alignParentLeft="false"
		android:layout_alignParentRight="false"
		android:layout_alignParentStart="false"
		android:layout_alignParentTop="false"
		android:elevation="2dp"
		android:orientation="horizontal">

		<Button
			android:id="@+id/entry_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_toRightOf="@id/entry_save"
			android:layout_weight="1"
			android:text="@string/entry_cancel" />

		<Button
			android:id="@+id/entry_save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_weight="1"
			android:text="@string/entry_save" />

	</LinearLayout>

	<ScrollView
		android:id="@+id/entry_scroll"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginBottom="@android:dimen/app_icon_size">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="@dimen/margin_medium">

			<TextView
				android:id="@+id/entry_title_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_title" />

			<EditText
				android:id="@+id/entry_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/entry_title_label"
				android:layout_toLeftOf="@+id/icon_button"
				android:hint="@string/hint_title"
				android:singleLine="true" />

			<TextView
				android:id="@+id/entry_user_name_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_user_name" />

			<EditText
				android:id="@+id/entry_user_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/entry_user_name_label"
				android:hint="@string/hint_username"
				android:inputType="textEmailAddress"
				android:singleLine="true" />

			<TextView
				android:id="@+id/entry_password_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_password" />

			<com.keepassdroid.view.PasswordEditText
				android:id="@+id/entry_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignTop="@id/generate_button"
				android:layout_toLeftOf="@id/generate_button"
				android:hint="@string/hint_pass"
				android:inputType="textPassword"
				android:singleLine="true"
				android:typeface="monospace" />

			<TextView
				android:id="@+id/entry_confpassword_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_confpassword" />

			<com.keepassdroid.view.PasswordEditText
				android:id="@+id/entry_confpassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/entry_confpassword_label"
				android:hint="@string/hint_conf_pass"
				android:inputType="textPassword"
				android:singleLine="true"
				android:typeface="monospace" />

			<Button
				android:id="@+id/generate_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_below="@id/entry_password_label"
				android:text="@string/generate_password" />

			<TextView
				android:id="@+id/entry_url_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_url" />

			<EditText
				android:id="@+id/entry_url"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/entry_url_label"
				android:hint="@string/hint_url"
				android:inputType="textUri"
				android:singleLine="true" />

			<TextView
				android:id="@+id/entry_comment_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/entry_comment" />

			<EditText
				android:id="@+id/entry_comment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/entry_comment_label"
				android:hint="@string/hint_comment"
				android:inputType="textMultiLine" />

			<LinearLayout
				android:id="@+id/advanced_container"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

			</LinearLayout>

			<Button
				android:id="@+id/add_advanced"
				style="@style/Base.Widget.AppCompat.Button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/add_string" />

			<ImageButton
				android:id="@+id/icon_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_below="@id/entry_title_label"
				android:src="@drawable/ic00" />

		</LinearLayout>
	</ScrollView>

</RelativeLayout>