<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010-2013 Tolga Onbay, Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
	android:padding="@dimen/margin_medium">


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/hint_generated_password"
					android:singleLine="true"
					android:typeface="monospace" />

				<Button
					android:id="@+id/generate_password_button"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@id/password"
					android:text="@string/generate_password" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">

					<TextView
						android:id="@+id/length_label"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:singleLine="true"
						android:text="@string/length" />

					<TextView
						android:id="@+id/password_length"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_weight="10"
						android:singleLine="true"
						android:text="16" />

				</LinearLayout>

				<SeekBar
					android:id="@+id/lengthSeekBar"
					android:layout_width="match_parent"
					android:layout_height="32dp"
					android:max="56"
					android:theme="@android:style/Widget.Material.SeekBar" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="horizontal">

					<CheckBox
						android:id="@+id/cb_lowercase"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_below="@id/cb_uppercase"
						android:layout_weight="1"
						android:checked="true"
						android:singleLine="true"
						android:text="@string/lowercase" />

					<CheckBox
						android:id="@+id/cb_uppercase"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:checked="true"
						android:singleLine="true"
						android:text="@string/uppercase" />

					<CheckBox
						android:id="@+id/cb_digits"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_below="@id/cb_lowercase"
						android:layout_weight="1"
						android:checked="true"
						android:singleLine="true"
						android:text="@string/digits" />

				</LinearLayout>

				<CheckBox
					android:id="@+id/cb_specials"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/special" />

			</LinearLayout>
		</ScrollView>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentBottom="false"
			android:layout_alignParentEnd="false"
			android:elevation="0dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/cancel_button"
				style="@style/Base.Widget.AppCompat.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="false"
				android:layout_toRightOf="@id/accept_button"
				android:layout_weight="1"
				android:text="@string/cancel" />

			<Button
				android:id="@+id/accept_button"
				style="@style/Base.Widget.AppCompat.Button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="false"
				android:layout_weight="1"
				android:text="@string/accept" />
		</LinearLayout>

	</LinearLayout>

</RelativeLayout>