<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2009-2015 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="@dimen/margin_medium">

	<EditText
		android:id="@+id/pass_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_pass"
		android:inputType="textPassword"
		android:singleLine="true" />

	<EditText
		android:id="@+id/pass_conf_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_conf_pass"
		android:inputType="textPassword"
		android:singleLine="true" />

	<EditText
		android:id="@+id/pass_keyfile"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_keyfile"
		android:singleLine="true" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="end"
		android:orientation="horizontal">

		<Button
			android:id="@+id/cancel"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:paddingLeft="@dimen/margin_medium"
			android:paddingRight="@dimen/margin_medium"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/ok"
			style="@style/Widget.AppCompat.Button.Colored"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:paddingLeft="@dimen/margin_medium"
			android:paddingRight="@dimen/margin_medium"
			android:text="@android:string/ok" />
	</LinearLayout>

</LinearLayout>