<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2009-2012 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:gravity="center_vertical|center_horizontal"
	android:orientation="vertical"
	android:padding="@dimen/margin_medium">

	<TextView
		android:id="@+id/filename_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_alignParentTop="false"
		android:text="@string/pass_filename"
		android:textColor="?android:attr/textColorPrimary"
		android:textStyle="bold" />

	<TextView
		android:id="@+id/filename"
		style="@style/GroupText"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/filename_label"
		android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
		android:textColor="?android:attr/textColorSecondary"
		android:textSize="14sp"
		android:visibility="visible" />

	<CheckBox
		android:id="@+id/default_database"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/filename"
		android:text="@string/default_checkbox" />

	<TextView
		android:id="@+id/password_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/default_database"
		android:text="@string/entry_and_or" />

	<Button
		android:id="@+id/browse_button"
		style="@style/Widget.AppCompat.Button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
		android:text="Key file (optional)"
		android:textAllCaps="false"
		android:textStyle="italic" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/password"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="false"
			android:layout_below="@+id/password_label"
			android:layout_weight="1"
			android:hint="@string/hint_login_pass"
			android:inputType="textPassword"
			android:singleLine="false"
			android:textAllCaps="false"
			android:textStyle="normal" />

		<ImageView
			android:id="@+id/fingerprint"
			android:layout_width="94dp"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="false"
			android:layout_below="@+id/password_label"
			android:layout_weight="1"
			android:src="@drawable/ic_fp_40px"
			android:visibility="gone" />
	</LinearLayout>

	<CheckBox
		android:id="@+id/show_password"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/pass_ok"
		android:text="@string/show_password" />

	<TextView
		android:id="@+id/fingerprint_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/fingerprint"
		android:text="@string/configure_fingerprint"
		android:visibility="gone" />

	<Button
		android:id="@+id/pass_ok"
		style="@android:style/Widget.Material.Button.Colored"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="false"
		android:layout_below="@+id/browse_button"
		android:autoText="false"
		android:text="@android:string/ok"
		android:textColorLink="?attr/colorAccent" />

	<TextView
		android:id="@+id/pass_keyfile"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="0"
		android:textSize="14sp"
		android:visibility="gone" />

</LinearLayout>