<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2010 Brian Pellin.
     
 This file is part of KeePassDroid.

  KeePassDroid is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  KeePassDroid is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with KeePassDroid.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/label_open_by_filename"
			style="?android:attr/listSeparatorTextViewStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="false"
			android:layout_weight="1"
			android:text="@string/enter_filename" />

		<TextView
			android:id="@+id/label_warning"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="false"
			android:layout_weight="1"
			android:textSize="20sp"
			android:visibility="gone" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/file_filename"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="false"
				android:layout_weight="1"
				android:singleLine="true" />

			<Button
				android:id="@+id/browse_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0"
				android:drawableLeft="@drawable/ic_folder_black_24dp"
				android:text="@string/database" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/open"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0"
				android:text="@string/menu_open" />

			<Button
				android:id="@+id/create"
				style="@style/Base.Widget.AppCompat.Button.Colored"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="false"
				android:layout_below="@+id/browse_button"
				android:layout_gravity="right"
				android:layout_weight="0"
				android:gravity="center_vertical|center_horizontal"
				android:text="@string/menu_create" />

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>
